Support help button in xfce4-settings-manager. One fix for bug #16332

--- a/data/xfdashboard-settings.desktop.in.in
+++ b/data/xfdashboard-settings.desktop.in.in
@@ -12,3 +12,5 @@ NotShowIn=GNOME;KDE;Unity;
 Terminal=false
 StartupNotify=true
 X-XfcePluggable=true
+X-XfceHelpComponent=xfdashboard
+X-XfceHelpPage=start
