Following main Xfce project by switching to "foreign" mode for automake
- This way, we don't need to provide a README file, now that we start to
  switch to README.md for markdown readme on gitlab
- "[..] differences between the gnu and foreign flavours is
  that the former requires the presence of a number of files in the
top-level of the projects": https://autotools.io/automake/options.html
- It also stop warning when using GNU make syntax, but we already
  mandate gnu make, so it's not a problem

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -39,7 +39,7 @@ m4_define([xfdashboard_debug_default], [ifelse(xfdashboard_version_tag(), [git],
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
-AC_COPYRIGHT([Copyright (c) 2012-2016 Stephan Haller <nomad@froevel.de>])
+AC_COPYRIGHT([Copyright (c) 2012-2020 Stephan Haller <nomad@froevel.de>])
 AC_INIT([xfdashboard], [xfdashboard_version], [http://docs.xfce.org/apps/xfdashboard/start], [xfdashboard])
 AC_PREREQ([2.50])
 AC_REVISION([xfdashboard_version_build])
@@ -48,7 +48,7 @@ dnl ***************************
 dnl *** Initialize automake ***
 dnl ***************************
 AM_CONFIG_HEADER([config.h])
-AM_INIT_AUTOMAKE([1.8 no-dist-gzip dist-bzip2 tar-ustar])
+AM_INIT_AUTOMAKE([1.8 no-dist-gzip dist-bzip2 tar-ustar foreign])
 AM_MAINTAINER_MODE()
 m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 AC_CONFIG_MACRO_DIR([m4])
