--- a/configure.ac.in
+++ b/configure.ac.in
@@ -309,6 +309,8 @@ data/appdata/Makefile
 data/data/Makefile
 data/icons/Makefile
 data/icons/16x16/Makefile
+data/icons/24x24/Makefile
+data/icons/32x32/Makefile
 data/icons/48x48/Makefile
 data/icons/128x128/Makefile
 data/icons/scalable/Makefile
