--- a/data/appdata/xfdashboard.appdata.xml.in
+++ b/data/appdata/xfdashboard.appdata.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<id>xfdashboard.desktop</id>
+	<id>org.xfce.xfdashboard.desktop</id>
 	<metadata_license>CC-BY-3.0</metadata_license>
 	<project_license>GPL-2.0+</project_license>
 	<name>xfdashboard</name>
@@ -20,22 +20,22 @@
 
 	<screenshots>
 		<screenshot type="default">
-			<image>http://docs.xfce.org/_media/apps/xfdashboard/starting-up.png</image>
+			<image>https://docs.xfce.org/_media/apps/xfdashboard/starting-up.png</image>
 		</screenshot>
 		<screenshot>
 			<_caption>Browsing applications</_caption>
-			<image>http://docs.xfce.org/_media/apps/xfdashboard/applications-view.png</image>
+			<image>https://docs.xfce.org/_media/apps/xfdashboard/applications-view.png</image>
 		</screenshot>
 		<screenshot>
 			<_caption>Searching applications</_caption>
-			<image>http://docs.xfce.org/_media/apps/xfdashboard/search-view.png</image>
+			<image>https://docs.xfce.org/_media/apps/xfdashboard/search-view.png</image>
 		</screenshot>
 	</screenshots>
 
 	<url type="homepage">http://docs.xfce.org/apps/xfdashboard/start/</url>
-	<url type="bugtracker">https://bugzilla.xfce.org</url>
+	<url type="bugtracker">https://gitlab.xfce.org/apps/xfdashboard/-/issues</url>
 	<url type="bugtracker">https://github.com/gmc-holle/xfdashboard/issues</url>
-	<url type="help">http://docs.xfce.org/apps/xfdashboard/manual</url>
+	<url type="help">https://docs.xfce.org/apps/xfdashboard/manual</url>
 
 	<project_group>XFCE</project_group>
 
@@ -44,6 +44,8 @@
 	<provides>
 		<binary>xfdashboard</binary>
 	</provides>
+
+	<launchable type="desktop-id">org.xfce.xfdashboard.desktop</launchable>
 
 	<kudos>
 		<kudo>HiDpiIcon</kudo>
@@ -65,6 +67,13 @@
 				animations, pop-up menus, multiple backend and support for
 				jumplists etc. It also includes lots of new and updated
 				translations.
+				</_p>
+			</description>
+		</release>
+		<release version="0.6.1" timestamp="1482422594">
+			<description>
+				<_p>This stable version fixes a bug setting the correct default
+				applications at first use.
 				</_p>
 			</description>
 		</release>
