--- a/configure.ac.in
+++ b/configure.ac.in
@@ -305,7 +305,7 @@ AC_SUBST(XFDASHBOARD_REQUIRES)
 AC_OUTPUT([
 Makefile
 data/Makefile
-data/appdata/Makefile
+data/metainfo/Makefile
 data/data/Makefile
 data/icons/Makefile
 data/icons/16x16/Makefile
