Dekstop files must match the new rDNS application name (org.xfce.xfdashboard) (fix for issue #4)

--- a/.gitignore
+++ b/.gitignore
@@ -23,12 +23,12 @@ data/themes/xfdashboard-moranga/xfdashboard.theme
 data/themes/xfdashboard-moranga/xfdashboard.theme.in
 data/themes/xfdashboard-wine/xfdashboard.theme
 data/themes/xfdashboard-wine/xfdashboard.theme.in
-data/xfdashboard.desktop
-data/xfdashboard.desktop.in
-data/xfdashboard-autostart.desktop
-data/xfdashboard-autostart.desktop.in
-data/xfdashboard-settings.desktop
-data/xfdashboard-settings.desktop.in
+data/org.xfce.xfdashboard.desktop
+data/org.xfce.xfdashboard.desktop.in
+data/org.xfce.xfdashboard-autostart.desktop
+data/org.xfce.xfdashboard-autostart.desktop.in
+data/org.xfce.xfdashboard-settings.desktop
+data/org.xfce.xfdashboard-settings.desktop.in
 ChangeLog
 libxfdashboard/enums.[ch]
 libxfdashboard/marshal.[ch]
