--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -5,29 +5,29 @@ SUBDIRS = \
 	themes
 
 desktopdir = $(datadir)/applications
-desktop_in_files = xfdashboard.desktop.in
+desktop_in_files = org.xfce.xfdashboard.desktop.in
 desktop_DATA = $(desktop_in_files:.desktop.in=.desktop)
 
 autostartdir = $(sysconfdir)/xdg/autostart
-autostart_in_files = xfdashboard-autostart.desktop.in
+autostart_in_files = org.xfce.xfdashboard-autostart.desktop.in
 autostart_DATA = $(autostart_in_files:.desktop.in=.desktop)
 
 settingsdir = $(datadir)/applications
-settings_in_files = xfdashboard-settings.desktop.in
+settings_in_files = org.xfce.xfdashboard-settings.desktop.in
 settings_DATA = $(settings_in_files:.desktop.in=.desktop)
 
 # Substitute bindir so it works when built in a non-system prefix
-xfdashboard.desktop.in:xfdashboard.desktop.in.in
+org.xfce.xfdashboard.desktop.in:org.xfce.xfdashboard.desktop.in.in
 	$(AM_V_GEN) sed -e "s|@bindir[@]|$(bindir)|" \
 	    -e "s|@VERSION[@]|$(VERSION)|" \
 	    $< > $@ || rm $@
 
-xfdashboard-autostart.desktop.in:xfdashboard-autostart.desktop.in.in
+org.xfce.xfdashboard-autostart.desktop.in:org.xfce.xfdashboard-autostart.desktop.in.in
 	$(AM_V_GEN) sed -e "s|@bindir[@]|$(bindir)|" \
 	    -e "s|@VERSION[@]|$(VERSION)|" \
 	    $< > $@ || rm $@
 
-xfdashboard-settings.desktop.in:xfdashboard-settings.desktop.in.in
+org.xfce.xfdashboard-settings.desktop.in:org.xfce.xfdashboard-settings.desktop.in.in
 	$(AM_V_GEN) sed -e "s|@bindir[@]|$(bindir)|" \
 	    -e "s|@VERSION[@]|$(VERSION)|" \
 	    $< > $@ || rm $@
