First step in libxfdashboard becoming a real library. Removed dependency on xfconf (will be moved to xfdashboard/settings applications) and created a settings class to get/set settings in-memory. Each application using libxfdashboard needs a wrapper around this settings class or has to derive a new class from it to store settings permanently, like at xfconf.
Also removed unused functions and properties from XfdashboardPlugin and completed API documentation of it.

--- a/libxfdashboard/Makefile.am
+++ b/libxfdashboard/Makefile.am
@@ -76,6 +76,7 @@ libxfdashboard_la_headers = \
 	search-result-container.h \
 	search-result-set.h \
 	search-view.h \
+	settings.h \
 	stage.h \
 	stage-interface.h \
 	stylable.h \
@@ -155,6 +156,7 @@ libxfdashboard_la_SOURCES = \
 	search-result-container.c \
 	search-result-set.c \
 	search-view.c \
+	settings.c \
 	stage.c \
 	stage-interface.c \
 	stylable.c \
@@ -189,7 +191,6 @@ libxfdashboard_la_CFLAGS = \
 	$(GIO_CFLAGS) \
 	$(GIO_UNIX_CFLAGS) \
 	$(GARCON_CFLAGS) \
-	$(LIBXFCONF_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(PLATFORM_CFLAGS)
@@ -202,7 +203,6 @@ libxfdashboard_la_LIBADD = \
 	$(GIO_LIBS) \
 	$(GIO_UNIX_LIBS) \
 	$(GARCON_LIBS) \
-	$(LIBXFCONF_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
 	$(LIBM)
