Complete permanent storage of settings via Xfconf (without handling plugins)

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -304,6 +304,7 @@ AC_SUBST(XFDASHBOARD_REQUIRES)
 
 AC_OUTPUT([
 Makefile
+common/Makefile
 data/Makefile
 data/metainfo/Makefile
 data/data/Makefile
