Add missing $(CLUTTER_LIBS) to LIBADD of static library libxfconf_settings.la

--- a/common/Makefile.am
+++ b/common/Makefile.am
@@ -29,6 +29,7 @@ libxfconf_settings_la_LDFLAGS = \
 	$(PLATFORM_LDFLAGS)
 
 libxfconf_settings_la_LIBADD = \
+	$(CLUTTER_LIBS) \
 	$(LIBXFCONF_LIBS)
 
 CLEANFILES = \
