--- a/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
+++ b/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
@@ -61,6 +61,13 @@
 	</keywords>
 
 	<releases>
+		<release version="0.8.1" timestamp="1614859879">
+			<description>
+				<_p>This stable version fixes a bug and replaces AppInfo
+				with AppStream metainfo.
+				</_p>
+			</description>
+		</release>
 		<release version="0.8.0" timestamp="1608711235">
 			<description>
 				<_p>This stable version introduces lots of new features like
