--- a/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
+++ b/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
@@ -61,6 +61,14 @@
 	</keywords>
 
 	<releases>
+		<release version="0.9.0" timestamp="1614942988">
+			<description>
+				<_p>This unstable development version introduces nothing
+				user visible but begin moving libxfdashboard into a real
+				library.
+				</_p>
+			</description>
+		</release>
 		<release version="0.8.1" timestamp="1614859879">
 			<description>
 				<_p>This stable version fixes a bug and replaces AppInfo
