--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -10,7 +10,12 @@ AM_CPPFLAGS = \
 bin_PROGRAMS = \
 	xfdashboard
 
+xfdashboard_headers = \
+	application.h
+
 xfdashboard_SOURCES = \
+	$(xfdashboard_headers) \
+	application.c \
 	main.c
 
 xfdashboard_CFLAGS = \
@@ -18,6 +23,7 @@ xfdashboard_CFLAGS = \
 	$(GLIB_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
+	$(LIBXFCE4UI_CFLAGS) \
 	$(GTK_CFLAGS) \
 	$(PLATFORM_CFLAGS)
 
@@ -26,6 +32,7 @@ xfdashboard_LDADD = \
 	$(GLIB_LIBS) \
 	$(LIBXFCONF_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
+	$(LIBXFCE4UI_LIBS) \
 	$(GTK_LIBS) \
 	$(top_builddir)/common/libxfconf-settings.la \
 	$(top_builddir)/libxfdashboard/libxfdashboard.la
