Correct POTFILES.in because of pipeline failed at "distcheck"

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -11,16 +11,16 @@ data/themes/xfdashboard-dark/xfdashboard.theme.in.in
 data/themes/xfdashboard-mint/xfdashboard.theme.in.in
 data/themes/xfdashboard-moranga/xfdashboard.theme.in.in
 data/themes/xfdashboard-wine/xfdashboard.theme.in.in
+common/xfconf-settings.c
 libxfdashboard/action-button.c
 libxfdashboard/actor.c
 libxfdashboard/animation.c
 libxfdashboard/application-button.c
 libxfdashboard/application-database.c
-libxfdashboard/application-tracker.c
-libxfdashboard/application.c
 libxfdashboard/applications-menu-model.c
 libxfdashboard/applications-search-provider.c
 libxfdashboard/applications-view.c
+libxfdashboard/application-tracker.c
 libxfdashboard/background.c
 libxfdashboard/binding.c
 libxfdashboard/bindings-pool.c
@@ -28,29 +28,35 @@ libxfdashboard/box-layout.c
 libxfdashboard/button.c
 libxfdashboard/click-action.c
 libxfdashboard/collapse-box.c
+libxfdashboard/core.c
 libxfdashboard/css-selector.c
-libxfdashboard/desktop-app-info.c
+libxfdashboard/debug.c
 libxfdashboard/desktop-app-info-action.c
+libxfdashboard/desktop-app-info.c
 libxfdashboard/drag-action.c
 libxfdashboard/drop-action.c
 libxfdashboard/dynamic-table-layout.c
 libxfdashboard/emblem-effect.c
+libxfdashboard/enums.c
 libxfdashboard/fill-box-layout.c
-libxfdashboard/focus-manager.c
 libxfdashboard/focusable.c
+libxfdashboard/focus-manager.c
+libxfdashboard/gdk/window-tracker-backend-gdk.c
 libxfdashboard/image-content.c
 libxfdashboard/label.c
-libxfdashboard/live-window-simple.c
 libxfdashboard/live-window.c
+libxfdashboard/live-window-simple.c
 libxfdashboard/live-workspace.c
+libxfdashboard/marshal.c
 libxfdashboard/model.c
 libxfdashboard/outline-effect.c
 libxfdashboard/plugin.c
+libxfdashboard/plugin-settings.c
 libxfdashboard/plugins-manager.c
-libxfdashboard/popup-menu-item-button.c
-libxfdashboard/popup-menu-item-separator.c
-libxfdashboard/popup-menu-item.c
 libxfdashboard/popup-menu.c
+libxfdashboard/popup-menu-item-button.c
+libxfdashboard/popup-menu-item.c
+libxfdashboard/popup-menu-item-separator.c
 libxfdashboard/quicklaunch.c
 libxfdashboard/scaled-table-layout.c
 libxfdashboard/scrollbar.c
@@ -59,34 +65,35 @@ libxfdashboard/search-provider.c
 libxfdashboard/search-result-container.c
 libxfdashboard/search-result-set.c
 libxfdashboard/search-view.c
-libxfdashboard/stage-interface.c
+libxfdashboard/settings.c
 libxfdashboard/stage.c
+libxfdashboard/stage-interface.c
 libxfdashboard/stylable.c
 libxfdashboard/text-box.c
-libxfdashboard/theme-css.c
 libxfdashboard/theme-animation.c
+libxfdashboard/theme.c
+libxfdashboard/theme-css.c
 libxfdashboard/theme-effects.c
 libxfdashboard/theme-layout.c
-libxfdashboard/theme.c
 libxfdashboard/toggle-button.c
 libxfdashboard/tooltip-action.c
 libxfdashboard/transition-group.c
 libxfdashboard/utils.c
-libxfdashboard/view-manager.c
-libxfdashboard/view-selector.c
 libxfdashboard/view.c
+libxfdashboard/view-manager.c
 libxfdashboard/viewpad.c
+libxfdashboard/view-selector.c
 libxfdashboard/window-content.c
+libxfdashboard/windows-view.c
 libxfdashboard/window-tracker-backend.c
+libxfdashboard/window-tracker.c
 libxfdashboard/window-tracker-monitor.c
 libxfdashboard/window-tracker-window.c
 libxfdashboard/window-tracker-workspace.c
-libxfdashboard/window-tracker.c
-libxfdashboard/windows-view.c
 libxfdashboard/workspace-selector.c
-libxfdashboard/gdk/window-tracker-backend-gdk.c
 libxfdashboard/x11/window-content-x11.c
 libxfdashboard/x11/window-tracker-backend-x11.c
+libxfdashboard/x11/window-tracker-monitor-x11.c
 libxfdashboard/x11/window-tracker-window-x11.c
 libxfdashboard/x11/window-tracker-workspace-x11.c
 libxfdashboard/x11/window-tracker-x11.c
@@ -97,13 +104,15 @@ plugins/example-search-provider/example-search-provider.c
 plugins/example-search-provider/plugin.c
 plugins/gnome-shell-search-provider/gnome-shell-search-provider.c
 plugins/gnome-shell-search-provider/plugin.c
-plugins/hot-corner/hot-corner-settings.c
 plugins/hot-corner/hot-corner.c
+plugins/hot-corner/hot-corner-settings.c
 plugins/hot-corner/plugin.c
+plugins/middle-click-window-close/middle-click-window-close.c
 plugins/middle-click-window-close/plugin.c
 settings/general.c
-settings/plugins.c
-settings/themes.c
 settings/main.c
+settings/plugins.c
 settings/settings.c
+settings/themes.c
+xfdashboard/application.c
 xfdashboard/main.c
