Remove xfdashboard_*_get_default() function to access single instances of subsystems/component as these single instances should now to access through XfdashboardCore and its xfdashboard_core_get_*(...)

--- a/xfdashboard/Makefile.am
+++ b/xfdashboard/Makefile.am
@@ -22,6 +22,7 @@ xfdashboard_CFLAGS = \
 	$(CLUTTER_CFLAGS) \
 	$(GLIB_CFLAGS) \
 	$(LIBXFCONF_CFLAGS) \
+	$(GARCON_CFLAGS) \
 	$(LIBXFCE4UTIL_CFLAGS) \
 	$(LIBXFCE4UI_CFLAGS) \
 	$(GTK_CFLAGS) \
@@ -31,6 +32,7 @@ xfdashboard_LDADD = \
 	$(CLUTTER_LIBS) \
 	$(GLIB_LIBS) \
 	$(LIBXFCONF_LIBS) \
+	$(GARCON_LIBS) \
 	$(LIBXFCE4UTIL_LIBS) \
 	$(LIBXFCE4UI_LIBS) \
 	$(GTK_LIBS) \
