--- a/configure.ac.in
+++ b/configure.ac.in
@@ -22,9 +22,7 @@ m4_define([clutter_minimum_version], [1.12.0])
 m4_define([glib_minimum_version], [2.38])
 m4_define([gio_minimum_version], [2.38])
 m4_define([garcon_minimum_version], [0.2.0])
-m4_define([xfconf_minimum_version], [4.13.0])
-m4_define([xfconf_legacy_minimum_version], [4.10.0])
-m4_define([dbus_glib_minimum_version], [0.98])
+m4_define([xfconf_minimum_version], [4.14.0])
 m4_define([xcomposite_minimum_version], [0.2])
 m4_define([intltool_minimum_version], [0.35])
 m4_define([gtk_minimum_version], [3.2])
@@ -218,19 +216,9 @@ XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [glib_minimum_version], [
 XDT_CHECK_PACKAGE([GIO], [gio-2.0], [gio_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES gio-2.0"])
 XDT_CHECK_PACKAGE([GIO_UNIX], [gio-unix-2.0], [gio_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES gio-unix-2.0"])
 XDT_CHECK_PACKAGE([GARCON], [garcon-1], [garcon_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES garcon-1"])
-XDT_CHECK_PACKAGE([LIBXFCONF], [libxfconf-0], [xfconf_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES libxfconf-0"], [
-	XDT_CHECK_PACKAGE([LIBXFCONF], [libxfconf-0], [xfconf_legacy_minimum_version], [
-		XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES libxfconf-0"
-
-		XDT_CHECK_PACKAGE([DBUS_GLIB], [dbus-glib-1], [dbus_glib_minimum_version], [
-			ac_dbus_glib=yes
-			XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES dbus-glib-1"],
-			[ac_dbus_glib=no])
-		AC_DEFINE([XFCONF_LEGACY], [], [Use xfconf < 4.13 to obtain array type])])
-	])
+XDT_CHECK_PACKAGE([LIBXFCONF], [libxfconf-0], [xfconf_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES libxfconf-0"])
 XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0],[libxfce4util_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES libxfce4util-1.0"])
 XDT_CHECK_PACKAGE([LIBXFCE4UI], [libxfce4ui-2],[libxfce4ui_minimum_version], [XFDASHBOARD_REQUIRES="$XFDASHBOARD_REQUIRES libxfce4ui-2"])
-AM_CONDITIONAL([DBUS_GLIB], [test x"$ac_dbus_glib" = x"yes"])
 
 dnl **********************************************
 dnl *** Check for Clutter and its backend: GDK ***
@@ -361,12 +349,7 @@ echo "  gio-unix:         $GIO_UNIX_VERSION"
 echo "  garcon:           $GARCON_VERSION"
 echo "  libxfce4ui:       $LIBXFCE4UI_VERSION"
 echo "  libxfce4util:     $LIBXFCE4UTIL_VERSION"
-if test "x$ac_dbus_glib" = "xyes" ; then
-echo "  libxconf:         $LIBXFCONF_VERSION (legacy)"
-echo "  dbus-glib:        $DBUS_GLIB_VERSION"
-else
 echo "  libxconf:         $LIBXFCONF_VERSION"
-fi
 echo
 echo "Tools used:"
 echo "  glib-genmarshal:  $GLIB_GENMARSHAL"
