--- a/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
+++ b/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
@@ -61,6 +61,14 @@
 	</keywords>
 
 	<releases>
+		<release version="0.9.1" timestamp="1616140047">
+			<description>
+				<_p>This unstable development version introduces completes
+				turning libxfdashboard into a real library and introduces
+				path gradients for outlines.
+				</_p>
+			</description>
+		</release>
 		<release version="0.9.0" timestamp="1614942988">
 			<description>
 				<_p>This unstable development version introduces nothing
