--- a/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
+++ b/data/metainfo/org.xfce.xfdashboard.metainfo.xml.in
@@ -32,7 +32,7 @@
 		</screenshot>
 	</screenshots>
 
-	<url type="homepage">http://docs.xfce.org/apps/xfdashboard/start/</url>
+	<url type="homepage">https://docs.xfce.org/apps/xfdashboard/start/</url>
 	<url type="bugtracker">https://gitlab.xfce.org/apps/xfdashboard/-/issues</url>
 	<url type="bugtracker">https://github.com/gmc-holle/xfdashboard/issues</url>
 	<url type="help">https://docs.xfce.org/apps/xfdashboard/manual</url>
@@ -61,6 +61,13 @@
 	</keywords>
 
 	<releases>
+		<release version="0.9.2" timestamp="1617869265">
+			<description>
+				<_p>This unstable development version completes gradients
+				with linear gradients for outline and background filling.
+				</_p>
+			</description>
+		</release>
 		<release version="0.9.1" timestamp="1616140047">
 			<description>
 				<_p>This unstable development version introduces completes
