Add new plugin "recently used" to search through list of recently used files provided by GTK+ recent-used manager

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -318,6 +318,7 @@ plugins/example-search-provider/Makefile
 plugins/gnome-shell-search-provider/Makefile
 plugins/hot-corner/Makefile
 plugins/middle-click-window-close/Makefile
+plugins/recently-used-search-provider/Makefile
 po/Makefile.in
 settings/Makefile
 xfdashboard/Makefile
