--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -3,4 +3,5 @@ SUBDIRS = \
 	example-search-provider \
 	gnome-shell-search-provider \
 	hot-corner \
-	middle-click-window-close
+	middle-click-window-close \
+	recently-used-search-provider
