Fix pipeline #8329 by adding missed files at POTFILES.in

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -108,6 +108,8 @@ plugins/hot-corner/hot-corner-settings.c
 plugins/hot-corner/plugin.c
 plugins/middle-click-window-close/middle-click-window-close.c
 plugins/middle-click-window-close/plugin.c
+plugins/recently-used-search-provider/plugin.c
+plugins/recently-used-search-provider/recently-used-search-provider.c
 settings/general.c
 settings/main.c
 settings/plugins.c
