Initial commit for new plugin "autopin-windows" which will pin all windows on non-primary monitors and unpins windows on primary monitor automatically

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -313,6 +313,7 @@ data/themes/xfdashboard-wine/Makefile
 libxfdashboard/libxfdashboard.pc
 libxfdashboard/Makefile
 plugins/Makefile
+plugins/autopin-windows/Makefile
 plugins/clock-view/Makefile
 plugins/example-search-provider/Makefile
 plugins/gnome-shell-search-provider/Makefile
