Because of missing $(XFDASHBOARD_DEBUG_CFLAGS) in all Makefile.am files (except of libxfdashboard and common folder) there were no debug messages printed as XFDASHBOARD_DEBUG macro was set to empty (noop)

--- a/plugins/gnome-shell-search-provider/Makefile.am
+++ b/plugins/gnome-shell-search-provider/Makefile.am
@@ -8,7 +8,8 @@ AM_CPPFLAGS = \
 	-DLIBEXECDIR=\"$(libexecdir)\" \
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
 	-DPLUGIN_ID=\"$(PLUGIN_ID)\" \
-	-DGNOME_SHELL_PROVIDERS_PATH=\"$(prefix)/share/gnome-shell/search-providers\"
+	-DGNOME_SHELL_PROVIDERS_PATH=\"$(prefix)/share/gnome-shell/search-providers\" \
+	$(XFDASHBOARD_DEBUG_CFLAGS)
 
 plugin_LTLIBRARIES = \
 	gnome-shell-search-provider.la
