--- a/plugins/autopin-windows/Makefile.am
+++ b/plugins/autopin-windows/Makefile.am
@@ -7,7 +7,8 @@ AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"xfdashboard-plugin-autopin-windows\" \
 	-DLIBEXECDIR=\"$(libexecdir)\" \
 	-DPACKAGE_LOCALE_DIR=\"$(localedir)\" \
-	-DPLUGIN_ID=\"$(PLUGIN_ID)\"
+	-DPLUGIN_ID=\"$(PLUGIN_ID)\" \
+	$(XFDASHBOARD_DEBUG_CFLAGS)
 
 plugin_LTLIBRARIES = \
 	autopin-windows.la
