--- a/libxfdashboard/enums.c.template
+++ b/libxfdashboard/enums.c.template
@@ -39,9 +39,9 @@
 /*** BEGIN value-header ***/
 GType @enum_name@_get_type(void)
 {
-	static volatile gsize	g_define_type_id__volatile=0;
+	static gsize	static_g_define_type_id=0;
 
-	if(g_once_init_enter(&g_define_type_id__volatile))
+	if(g_once_init_enter(&static_g_define_type_id))
 	{
 		static const G@Type@Value values[]=
 		{
@@ -56,10 +56,10 @@ GType @enum_name@_get_type(void)
 		};
 
 		GType	g_define_type_id=g_@type@_register_static(g_intern_static_string("@EnumName@"), values);
-		g_once_init_leave(&g_define_type_id__volatile, g_define_type_id);
+		g_once_init_leave(&static_g_define_type_id, g_define_type_id);
 	}
 
-	return(g_define_type_id__volatile);
+	return(static_g_define_type_id);
 }
 
 /*** END value-tail ***/
