--- a/Makefile.am
+++ b/Makefile.am
@@ -6,6 +6,7 @@ EXTRA_DIST = \
 	intltool-extract.in \
 	intltool-merge.in \
 	intltool-update.in \
+        po/.intltool-merge-cache.lock \
 	README.md
 
 DISTCLEANFILES = \
